infra/bastion/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bastion-ssh
spec:
  selector:
    kubevirt.io/domain: bastion
  ports:
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 22
      nodePort: 30022
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: bastion-cockpit
spec:
  selector:
    kubevirt.io/domain: bastion
  ports:
    - name: cockpit
      protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 30090
  type: NodePort
